# py-rest-service-template

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile.dev  Dockerfile.render.dev  Dockerfile.test  Dockerfile.test.nopoetry  Makefile  README.md  cloudbuild-ci.yaml  cloudbuild-deploy.yaml  cloudbuild.yaml  docker-compose.inspect.yml  docker-compose.render.yml  docker-compose.test.yml  docker-compose.yml  gunicorn_command.sh  purge_old_versions.sh  pyproject.toml  queue.yaml.template  render.py  requirements-dev.txt  requirements.txt  test_command.sh
app/: __init__.py
app/common/: __init__.py  api_base.py  api_dependencies.py  clients.py  enums.py  excs.py  jsonapi.py  logger.py  middlewares.py  orm_base.py  server_env.py  sql_dals.py  sql_utils.py  utils.py
app/common/models/: __init__.py  datastore_models.py  models.py  orm_models.py
app/services/api/: api.py
app/services/api/resources/: sql_users.py
app/services/default/: api.py  const.py
app/services/default/resources/: version.txt
app/tests/: __init__.py  conftest.py  pytest.ini
app/tests/common/: __init__.py  sql_dals_test.py  utils.py
app/tests/services/api/: api_sql_users_test.py
config/: DEV.yaml  LOCAL.yaml  PROD.yaml  TEST.yaml  UAT.yaml
config/docker/: env.dev
docker/overrides/: docker-compose.override.bandit.yml  docker-compose.override.black-check.yml  docker-compose.override.black-format.yml  docker-compose.override.mypy.yml
scripts/: init.sql  setup_local.py
